<resources>
    <string name="app_name">Voice Memo</string>
    <string name="permission_rationale">permission is needed for the app to function</string>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>
    <string name="permission_denied">permission was denied. Please consider granting it for the app to Function</string>
    <string name="permission_never_ask">permission was denied with never ask again</string>
    <string name="close">Close</string>
    <string name="play">Play</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="create_reminder">Create Reminder</string>
    <string name="share">Share</string>
</resources>
