<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menu_bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout
        android:id="@+id/bottom_sheet_play"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_play_arrow_black_24dp"
            android:tint="@color/colorAccent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:text="@string/play"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_sheet_edit"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_edit_black_24dp"
            android:tint="@color/colorAccent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:text="@string/edit"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_sheet_delete"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_delete_black_24dp"
            android:tint="@color/colorAccent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:text="@string/delete"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_sheet_reminder"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_access_alarm_black_24dp"
            android:tint="@color/colorAccent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:text="@string/create_reminder"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_sheet_share"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_share_black_24dp"
            android:tint="@color/colorAccent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:text="@string/share"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
    </LinearLayout>

</LinearLayout>